fix: fixed sidebar spacing issue

--- a/src/pages/history/history.css
+++ b/src/pages/history/history.css
@@ -1,3 +1,6 @@
+.sidebar_historylist_container {
+  margin-top: 2.4rem;
+}
 .fa-trash.stacked-list-icon {
   margin-left: auto;
 }
@@ -5,6 +8,7 @@
   margin-left: auto;
   margin-right: auto;
 }
+
 @media screen and (max-width: 1014px) {
   .list_reset.stacked-list-item {
     width: 90%;
