--- a/src/pages/liked/liked.css
+++ b/src/pages/liked/liked.css
@@ -1,5 +1,6 @@
 .sidebar_likedVideos_container {
   display: flex;
+  margin-top: 2.4rem;
 }
 .likedVideos_list {
   margin-top: var(--space-md);
