--- a/src/pages/playlist/playlist.css
+++ b/src/pages/playlist/playlist.css
@@ -1,5 +1,6 @@
 .playlist_sidebar_container {
   display: flex;
+  margin-top: 2.4rem;
 }
 .playlist_tile_container {
   width: 100%;
