--- a/src/pages/watchlater/watchlater.css
+++ b/src/pages/watchlater/watchlater.css
@@ -1,3 +1,6 @@
+.sidebar_watchlater_container {
+  margin-top: 2.4rem;
+}
 .watchlater_video_thumbnail {
   width: 13rem;
   height: 8rem;
